# VisioFUT

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/football_detection_cvat_v1/: data.yaml
res/: README.md
res/football_detection_cvat_v1/: notes.md  results.json
res/template/: notes.md  results.json
src/dev/: dev_launcher.py
src/dev/gui/: dev_gui.py
src/dev/model/: cvat_element.py  dev_enum.py
src/dev/service/: tracker_service.py  tracker_worker.py
src/dev/shared/: feature_ui.py
src/dev/tracker/: annotation_models.py  annotation_service.py  annotation_ui.py  annotation_worker.py
src/utils/: setup_test.py
src/utils/gui/: VisioFUTUtilsApp.py
src/utils/model/: CVATElement.py  enum.py
src/utils/service/: VisioFUTService.py  VisioFUTWorker.py
src/utils/yolo2cvat/: model.py  yolo_2_cvat.py
src/utils/yolo2cvat/model/: CVATElement.py  YoloAnnotation.py
