[project]
name = "VisioFUT"
version = "0.1.0"
description = "Computer vision system for extracting performance statistics from amateur football matches"
requires-python = ">=3.10,<3.11"

dependencies = [
    "ultralytics>=8.1.0",
    "opencv-python",
    "numpy",
    "matplotlib",
    "tqdm",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
